hphp/test/slow/type_constant2.php.expectf
Fatal error: C cannot inherit the type constant T, because it was previously inherited from I in %s/type_constant2.php on line 11
